# internal/delivery/api/docs/swagger.json
@@ -588,7 +588,7 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Account IDs",
-                        "name": "account_ids[]",
+                        "name": "account_ids",
                         "in": "query"
                     },
                     {
@@ -656,7 +656,7 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Account IDs",
-                        "name": "account_ids[]",
+                        "name": "account_ids",
                         "in": "query"
                     },
                     {
@@ -666,7 +666,7 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Category IDs",
-                        "name": "category_ids[]",
+                        "name": "category_ids",
                         "in": "query"
                     },
                     {
@@ -750,7 +750,7 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Account IDs",
-                        "name": "account_ids[]",
+                        "name": "account_ids",
                         "in": "query"
                     },
                     {
@@ -825,7 +825,7 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Account IDs",
-                        "name": "account_ids[]",
+                        "name": "account_ids",
                         "in": "query"
                     },
                     {
@@ -835,7 +835,17 @@
                         },
                         "collectionFormat": "csv",
                         "description": "Category IDs",
-                        "name": "category_ids[]",
+                        "name": "category_ids",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Subcategory IDs",
+                        "name": "subcategory_ids",
                         "in": "query"
                     },
                     {
@@ -1041,6 +1051,16 @@
                         "collectionFormat": "csv",
                         "description": "category ids",
                         "name": "category_ids",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "subcategory ids",
+                        "name": "subcategory_ids",
                         "in": "query"
                     },
                     {
